--- a/main.html
+++ b/main.html
@@ -13,7 +13,7 @@ label,input{display:block;}
 	<form action="" method="post" id="MyForm">
 	<label for="radius">Radius</label><input type="text" name="radius" id="radius" required>
 	<label for="volume">Volume</label><input type="text" name="volume" id="volume">
-	<input type="submit" value="Calculate" id="submit">    </form>
+	<input type="submit" value="Calculate" id="submit" onClick="volume_sphere()">    </form>
 	<script type="text/javascript" src="./script.js"></script>
 </body>
 </html>
